--- a/РОИ_впечатления_рядового_гражданина.html
+++ b/РОИ_впечатления_рядового_гражданина.html
@@ -2,6 +2,8 @@
 
 Вдохновлённый Всероссийской Интернет-забастовкой первого августа, я решил исполнить гражданский долг: зарегистрироваться на РОИ и голосовать, голосовать, голосовать... Сейчас я расскажу вам о том, какие впечатления получил. Кратко и конспективно. Подчеркну - никаких точных цифр: результатом стало именно впечатление. Субъективное, отрывистое, но, надеюсь, всё-таки полезное и интересное.
 
+<habracut/>
+
 Что я делал?
 Открыл каталог инициатив (петиций) в порядке появления на сайте и рассмотрел каждую из тех, что были поданы с апреля по июль (всего около 1300-1500 штук). Каждую изучал и принимал решение - за, против или воздерживаюсь (просто не голосую). Решение воздержаться принималось только в случае, если я вообще ничего не понимаю в обсуждаемой сфере (например, распределение налогов между федеральным и региональном бюджетом).
 
