РОИ_лобби: гитхаб

--- a/РОИ_лобби.html
+++ b/РОИ_лобби.html
@@ -6,9 +6,9 @@
 
 <habracut/>
 
-Условно говоря, всех, кто вредит интернету, можно разделить на угнетателей и саботажников.
+Прошу больно не пинать за возможные ошибки - все мы люди. К счастью, если пост выйдет из песочницы, он будет подлежать редактированию (в отличие от инициатив на РОИ). Пнуть меня небольно можно на <a href="https://github.com/nickkolok/habrposts">гитхабе</a>.
 
-Саботажники - это те, кто не делает того, что должен, и этим вредит интернету. Например, если минкомсвязи завалит план по переводу страны на Linux (google://Распоряжение 2299-р), то будет являться организацией-саботажником. 
+Условно говоря, всех, кто вредит интернету, можно разделить на угнетателей и саботажников. Саботажники - это те, кто не делает того, что должен, и этим вредит интернету. Например, если минкомсвязи завалит план по переводу страны на Linux (google://Распоряжение 2299-р), то будет являться организацией-саботажником. 
 Угнетатели - это те, кто вредит интернету своими действиями. Угнетатели делятся на цензоров и копирастов (при этом один и тот же угнетатель может быть и цензором, и копирастом). Цензор - тот, кто вводит цензуру, копираст <i>(от слов "копирайт" и "расти" - прим. для цензоров)</i>- тот, кто остервенело защищает т. наз. "авторские" "права".
 
 В чём же причина того, что сейчас идёт уничтожение интернета? <i>(Интернет, как, например, атмосферу или небо, я не считаю именем собственным и пишу с маленькой буквы - прим. для граммар-наци.)</i> Причин, вероятно, несколько. Можно вспомнить свободу слова и скорость распространения информации, которые превращают интернет в источник сверхгласности. Можно сказать, что дело в копирастах, которых прикрывает министерство по борьбе с культурой (кажется, так сейчас правильно называется минкульт?). Не будем останавливаться на этих двух аспектах, ибо разложены они по полочкам уже не раз и не два публицистами более опытными, чем я; практические методы борьбы на этих двух направлениях тоже разрабатываются и используются. 
